<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".MainActivity">-->

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Hello World!"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/cardview_light_background">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardUseCompatPadding="true">
            <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/gambariiphone13"
                android:scaleType="fitXY"/>
            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentStart="true"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_favorite_border_24"
                android:layout_gravity="end" android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/black">
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp">
                <TextView android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:paddingStart="10dp"
                    android:text="Apple Iphone 13 Pro 128GB All Color"
                    android:textColor="@color/white"
                    android:layout_marginBottom="10dp"/>
                <LinearLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_baseline_star_rate_24"/>
                    <ImageView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_baseline_star_rate_24"/>
                    <ImageView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_baseline_star_rate_24"/>
                    <ImageView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_baseline_star_rate_24"/>
                    <ImageView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_baseline_star_half_24"/>
                    <TextView android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="4.8"
                        android:textColor="@color/white"
                        android:layout_marginTop="3dp"
                        android:layout_marginStart="2dp"/>
                </LinearLayout> <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskription_menu"
                android:textColor="@color/white"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"/>
                <TextView android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"/>
                <TextView android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Resep"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp" />
                <LinearLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="15dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="15dp"
                        android:layout_weight="0.5">
                        <TextView android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/price"
                            android:textColor="@color/white"
                            android:layout_marginStart="10dp" />
                        <TextView android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Harga"
                            android:textColor="@color/white"
                            android:layout_marginStart="10dp"
                            android:textSize="24sp"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/button"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="0.5"
                        android:text="ADD TO CHART"
                        android:background="@color/material_dynamic_tertiary80"
                        android:textAllCaps="false" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/black"
            app:cardUseCompatPadding="true">
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="MORE INFORMATION"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"/>
                <TableLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp">
                    <TableRow android:layout_width="match_parent"
                        android:layout_height="match_parent" >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">
                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:cardCornerRadius="5dp"
                                app:cardUseCompatPadding="true">
                                <ImageView android:id="@+id/imageView1"
                                    android:layout_width="150dp"
                                    android:layout_height="100dp"
                                    app:srcCompat="@drawable/gambarsamsungs" />
                            </androidx.cardview.widget.CardView>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="center_vertical">
                                <TextView android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="Samsung S Series"
                                    android:textSize="20dp"
                                    android:textColor="@color/white"/>
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="horizontal">
                                    <ImageView android:layout_width="30dp"
                                        android:layout_height="wrap_content"
                                        app:srcCompat="@drawable/ic_baseline_star_rate_24"
                                        android:foregroundGravity="left"/>
                                    <TextView android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="4.8"
                                        android:textColor="@color/white"
                                        android:layout_gravity="center_vertical"/>
                                </LinearLayout> <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Tersedia"
                                android:textSize="10dp"
                                android:textColor="@color/white"/>
                            </LinearLayout>
                        </LinearLayout>
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">
                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:cardCornerRadius="5dp"
                                app:cardUseCompatPadding="true">
                                <ImageView
                                    android:id="@+id/imageView2"
                                    android:layout_width="150dp"
                                    android:layout_height="100dp"
                                    app:srcCompat="@drawable/gambarsamsung"/>
                            </androidx.cardview.widget.CardView>
                            <LinearLayout android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="center_vertical">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="Samsung Flip Series"
                                    android:textSize="20dp"
                                    android:textColor="@color/white"/>
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="horizontal">
                                    <ImageView
                                        android:layout_width="30dp"
                                        android:layout_height="wrap_content"
                                        app:srcCompat="@drawable/ic_baseline_star_rate_24"
                                        android:foregroundGravity="left"/>
                                    <TextView android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="4.8"
                                        android:textColor="@color/white"
                                        android:layout_gravity="center_vertical"/>
                                </LinearLayout>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="Tersedia"
                                    android:textSize="10dp"
                                    android:textColor="@color/white"/>
                            </LinearLayout>
                        </LinearLayout>
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
